# HeadFirst_DesignPatterns

./: .gitignore  CMakeLists.txt  README.MD  clean.sh  docs.sh
01_Strategy/: CMakeLists.txt
01_Strategy/LegacyDuck/: CMakeLists.txt
01_Strategy/LegacyDuck/include/: Duck.h  MallardDuck.h  RedHeadDuck.h  RubberDuck.h  SimulatorGUI.h  global_includes.h
01_Strategy/LegacyDuck/src/: CMakeLists.txt  Duck.cc  Duck.cpp  MallardDuck.cc  MallardDuck.cpp  RedHeadDuck.cc  RedHeadDuck.cpp  RubberDuck.cc  SimulatorGUI.cc  SimulatorGUI.cpp  main.cc  main.cpp
01_Strategy/StrategicDuck/: CMakeLists.txt  FlyBehavior.h  FlyWithWings.cpp  FlyWithWings.h  globalInclude.h  main.cpp
01_Strategy/StrategicDuck/include/: Duck.h  FlyBehavior.h  FlyNoWay.h  FlyWithWings.h  MallardDuck.h  Meow.h  MuteQuack.h  Quack.h  QuackBehavior.h  RedHeadDuck.h  RubberDuck.h  SimulatorGUI.h  Squeak.h  globalInclude.h
01_Strategy/StrategicDuck/src/: CMakeLists.txt  Duck.cc  FlyNoWay.cc  FlyWithWings.cc  MallardDuck.cc  Meow.cc  MuteQuack.cc  Quack.cc  RedHeadDuck.cc  RubberDuck.cc  SimulatorGUI.cc  Squeak.cc  main.cc
01_Welcome/: CMakeLists.txt
02_Observer/: CMakeLists.txt
02_Observer/WeatherStation/: CMakeLists.txt
02_Observer/WeatherStation/include/: CurrentDisplay.h  DisplayElement.h  Observer.h  (+5 more)
03_Decorator/: CMakeLists.txt
04_Factory/: CMakeLists.txt  README.MD
05_Singleton/: CMakeLists.txt  README.MD
06_Command/: CMakeLists.txt
07_AdapterFacade/: CMakeLists.txt
08_TemplateMethod/: CMakeLists.txt
09_IteratorComposite/: CMakeLists.txt
10_State/: CMakeLists.txt
11_Proxy/: CMakeLists.txt
12_Compound/: CMakeLists.txt
13_BetterLiving/: CMakeLists.txt
Appendices/: CMakeLists.txt
docs/: Doxyfile
(+8 files in other folders)
